--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "start": "deno run --allow-net --allow-read --allow-write ../backend/app.ts",
+    "dev": "deno run --watch --allow-net --allow-read --allow-write ../backend/app.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
