--- a/fly.toml
+++ b/fly.toml
@@ -1,25 +1,22 @@
-# fly.toml app configuration file generated for footoshop-backend
+# fly.toml app configuration file generated for footoshop-backend on 2025-06-30T15:07:07+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "footoshop-backend"
-primary_region = "ord"
+app = 'footoshop-backend'
+primary_region = 'fra'
 
-[build]
+[env]
+  DENO_DEPLOY = 'true'
+  PORT = '4000'
 
 [http_service]
   internal_port = 4000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
-  cpus = 1
-  memory_mb = 256
-
-[env]
-  PORT = "4000"
-  DENO_DEPLOY = "true"
+  size = 'shared-cpu-1x'
